Resolves: tdf#158223 Revert "fix" for tdf#156174 and follow-up

... introducing a real fix.

    commit 94ca402cd1fe2fd9776d08448f7216b7f638e69a
    CommitDate: Tue Jul 25 15:04:01 2023 +0200

        tdf#156174 sc DBData: fix regression of database ranges

just cured a symptom by removing a condition that shouldn't had been
removed, instead of getting to the real cause of an odd reference
update.

Shrinking the end of a sheet reference range and thus moving it one
before the previously referenced relative position is only possible if
the deleted sheet actually touches the referenced range, which here the
start value points to and thus checking ref>=start+delta is not
necessary and subtracting 1 even harms. This is different from deleting
columns or rows where the start value points behind the deleted area of
moving the following area.

Change-Id: If9ae5dd6f6ae5cd248ad5d999f1aa7577d4ec035
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160374
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit ec165d6fe3784f5cd78351a537abf69e88b68420)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160354
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>